Conf-AmonNG

30/09/2008:
- dicos/3_dansguardian.xml : ajout de configuration separee pour les zones 1 et 2 de dansguardian
- tmpls/dansguardian1 et 2.conf : fichier separe par zone (lie a la modification du 30/09/2008 de amon-backend)
- tmpl/spcl.options : support de la carte "dmz" pour amonecole
- eole/gen_dns : ajoute le support d'amonecole


24/09/2008
- eole/amon-postupgrade : test sur la version NG de départ pour l'upgrade des configs dansguardian

18/09/08 (sam)
- ajout d'un dico pour la gestion des routes statiques + fichier static-routes en templates

8/09/08 (sam)
- interface : 	- ajout paramètres gateway au niveau vlan et alias eth0 pour multi-routeur
		- alias interface completement parametrable

15/07/2008
- changement de syslog-ng par rsyslog
- ajout du dictionnaire 1_logs.xml

09/06/2008
- squid.conf: ajout d'un deuxieme fichiers (utilisateur) pour les noauth et nocache
- prereconf: ajout d'un touch vers les deux fichiers domaines_noauth_user et domaines_nocache_user

6/06/2008
- magic_rvp.py: /etc/init.d/rvp restart au lieu de service rvp restart

3/06/08 (sam)
hosts : correction bug cosmetique -> pas d'alias lorsqu'on utilise des domaines supplémentaires car ils existent déjà dans le domaine principal

30/05/2008
- ajout de template en fonction du mode (défaut, modérateur, interdit, liste blanche) avec couleur en concordance avec l'EAD2

28/05/2008
- hosts : ajout d'un alias si le serveur d'authentification NTLM et ScribeDMZ sont la même machine renseignée avec un nom différent (nom machine et nom machine SMB) + ajout possibilite d'un domaine local supplémentaire
- firewall.stop : pb regle prerouting et postrouting. Politique par defaut en DROP !
- bug 571 : un seul manage-amon
- StartQos.sh : suppression du flush des tables mangle

27/05/08 (sam, k)
- killp2p : "exit 0" a la place de "exit 1" dans "start" si p2p est desactive
- magic-rvp : correction bug 858

26/05/08 (j)
 - bug 863 : correction de gen_ipsec-policy avec plusieurs vlans
