@@ -290,7 +290,11 @@ nuauth_tls_max_clients=1024
 # complete name of server private key
 # default to CONFIGDIR/nuauth.pem
 # Warning: nuauth need to be restarted if value is changed
-nuauth_tls_key="/etc/nufw/certs/nuauth-key.pem"
+%if %%nuauth_tls_key == "none"
+#nuauth_tls_key="/etc/nufw/certs/nuauth-key.pem"
+%else
+nuauth_tls_key="%%nuauth_tls_key"
+%end if
 
 # password for private key (if needed)
 # NOTE : currently unsupported
@@ -299,11 +303,19 @@ nuauth_tls_key="/etc/nufw/certs/nuauth-key.pem"
 
 # complete path to server certificate
 # Warning: nuauth need to be restarted if value is changed
-nuauth_tls_cert="/etc/nufw/certs/nuauth-cert.pem"
+%if %%nuauth_tls_cert == "none"
+#nuauth_tls_cert="/etc/nufw/certs/nuauth-cert.pem"
+%else
+nuauth_tls_cert="%%nuauth_tls_cert"
+%end if
 
 # complete path to certificate authority
 # Warning: nuauth need to be restarted if value is changed
+%if %%nuauth_tls_cacert == "none"
 #nuauth_tls_cacert="/etc/nufw/NuFW-cacert.pem"
+%else
+nuauth_tls_cacert="%%nuauth_tls_cacert"
+%end if
 
 # complete filename of server certificate
 # revocation list
